fixed too wide search results table for small resolutions

--- a/css/search.css
+++ b/css/search.css
@@ -2,9 +2,17 @@
 #search_loader_container{
     text-align: center;
     margin-top: 10px;
+    max-width: 100%;
 }
 #loadDataLoader{
     display: none;
+}
+
+#search_results{
+    max-width: none;
+    table-layout: fixed;
+    word-wrap: break-word;
+    cursor: pointer;
 }
 
 @media (max-width: 767px) {
